--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">wifiStrength</string>
     <string name="buttonText">Click here to see WiFi Strength</string>
+    <string name="intent">Open file</string>
 </resources>
